yap-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yap-api
spec:
  selector: 
    app: yap-api
  ports:
    - port: 50050
      targetPort: 50050
